--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main class="pomodoro-container">
+        <div class="clock-container">
+            <h2>25:00</h2>
+            <div class="input-container">
+                <label for="">Pomodoro cycles</label>
+                <input type="number" value="1">
+            </div>
+        </div>
+        <div class="control-container">
+            <button type="button">START</button>
+        </div>
+        <div class="settings-container">
+            <label for="work-time">
+                <span>WORK TIME</span>
+                <input type="text" id="work-time" value="25">
+            </label>
+            <label for="break-time">
+                <span>BREAK TIME</span>
+                <input type="text" id="break-time" value="5">
+            </label>
+            <label for="rest-time">
+                <span>REST TIME</span>
+                <input type="text" id="rest-time" value="15">
+            </label>
+        </div>
+    </main>
 </body>
 </html>
