--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
                     <input type="number" id="longInput" value="15" min="1">
                 </label>
             </form>
+            <button class="button-close-container" id="closeModalAlert">
+                <span type="button">OK</span>
+            </button>
+        </div>
+    </section>
+    <section class="modal" id="modalAlert">
+        <div class="modal-container">
+            <h2>HOLAAA</h2>
             <button class="button-close-container" id="closeModal">
                 <span type="button">OK</span>
             </button>
